--- a/gmall-user/src/main/resources/application.properties
+++ b/gmall-user/src/main/resources/application.properties
@@ -12,6 +12,10 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 #驼峰
 mybatis.configuration.map-underscore-to-camel-case=true
 
+#通用mapper主键生成策略mysql数据库自动生成
+mapper.identity=MYSQL
+
 
 # 日志级别
-logging.level.root=info
+#logging.level.root=info
+logging.level.root=debug
