--- a/gmall-user/src/main/resources/application.properties
+++ b/gmall-user/src/main/resources/application.properties
@@ -17,5 +17,5 @@ mapper.identity=MYSQL
 
 
 # 日志级别
-#logging.level.root=info
-logging.level.root=debug
+logging.level.root=info
+#logging.level.root=debug
